# kamome

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  TODO.md  pyproject.toml
.codex/skills/update-design/: SKILL.md
.codex/skills/update-docs/: SKILL.md
.github/workflows/: ci.yml  publish.yml
docs/: release.md  requirements.md
docs/design/: development-environment.md  runtime-backends.md
src/pytest_stepfunctions/: __init__.py  _dev.py  config.py  definition.py  exceptions.py  markers.py  model.py  plugin.py  validation.py
src/pytest_stepfunctions/backends/: __init__.py  aws.py  base.py  local.py  teststate.py
src/pytest_stepfunctions/helpers/: __init__.py  assertions.py
tests/integration/: test_aws_backend.py  test_local_backend.py  test_teststate_backend.py
tests/plugin/: test_plugin.py
tests/unit/: test_backends.py  test_config.py  test_definition.py  test_dev.py  test_init.py  test_markers.py  test_model.py  test_plugin_unit.py  test_runtime_modules.py  test_tutorial_assets.py  test_validation.py
tools/: vulture_whitelist.py
tutorials/order_status/: README.md
tutorials/order_status/inputs/: paid.json  pending.json
tutorials/order_status/tests/: test_local_order_flow.py  test_teststate_order_status.py
tutorials/order_status/workflows/: order_status.asl.json
